--- a/params/targets.yaml
+++ b/params/targets.yaml
@@ -1,3 +1,3 @@
-target_x: [1.1,  1.1,    2.2,   2.2,  3.2]
-target_y: [0,    0.575,  0.575, 0.05, 0.05]
-target_z: [0,    0,      0,     0,    0]
+target_x: [1.4,  1.4,    2.5,   2.5,  4,  4.1]
+target_y: [0,    0.425,  0.425, 0.085, 0.085, 0.085]
+target_z: [0,    0,      0,     0,    0,    0]
